<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>simulator</description>
  <maintainer email="gergo.igneczi@ga.sze.hu">IgnecziGergo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>crp_msgs</depend>
  <depend>autoware_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
